--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -127,17 +127,25 @@
 <script src="js/services/tree.js"></script>
 <script src="js/services/users.js"></script>
 <script src="js/services/ngLoading.js"></script>
+<!--New GUI-->
+<script src="js/services/models.js"></script>
 
 <script src="js/model/cubeConfig.js"></script>
 <script src="js/model/jobConfig.js"></script>
 <script src="js/model/projectConfig.js"></script>
 <script src="js/model/tableConfig.js"></script>
+<!--New GUI-->
+<script src="js/model/modelConfig.js"></script>
+
 <script src="js/model/cubeDescModel.js"></script>
 <script src="js/model/metaModel.js"></script>
 <script src="js/model/projectModel.js"></script>
 <script src="js/model/tableModel.js"></script>
 <script src="js/model/cubeListModel.js"></script>
 <script src="js/model/jobListModel.js"></script>
+
+<!--New GUI-->
+<script src="js/model/modelList.js"></script>
 
 <script src="js/controllers/page.js"></script>
 <script src="js/controllers/index.js"></script>
@@ -158,6 +166,14 @@
 <script src="js/controllers/cubeFilter.js"></script>
 <script src="js/controllers/cubeRefresh.js"></script>
 <script src="js/controllers/cubeAdvanceSetting.js"></script>
+<!--New GUI-->
+<script src="js/controllers/modelSchema.js"></script>
+<script src="js/controllers/modelDimensions.js"></script>
+<script src="js/controllers/modelRefresh.js"></script>
+
+<!--New GUI-->
+<script src="js/controllers/models.js"></script>
+
 <!-- endref -->
 
 <!-- ref:remove -->
