KYLIN-919,UI enhancement for 0.8

--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -156,6 +156,7 @@
 <script src="js/controllers/auth.js"></script>
 <script src="js/controllers/job.js"></script>
 <script src="js/controllers/cube.js"></script>
+<script src="js/controllers/cubes.js"></script>
 <script src="js/controllers/projects.js"></script>
 <script src="js/controllers/cubeEdit.js"></script>
 <script src="js/controllers/cubeSchema.js"></script>
