--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -43,6 +43,7 @@
     <link rel="stylesheet" type="text/css" href="css/AdminLTE.css">
     <link rel="stylesheet" type="text/css" href="components/bootstrap-sweetalert/lib/sweet-alert.css">
     <link rel="stylesheet" type="text/css" href="components/angular-busy/dist/angular-busy.css">
+    <link rel="stylesheet" type="text/css" href="components/angular-ui-select/dist/select.css">
 
 
     <link rel="stylesheet/less" href="less/build.less">
@@ -101,6 +102,8 @@
 <script src="components/jquery-ui/jquery-ui.min.js"></script>
 <script src="components/angular-ui-sortable/sortable.js"></script>
 <script src="components/angular-busy/dist/angular-busy.js"></script>
+<script src="components/angular-ui-select/dist/select.js"></script>
+<script src="components/angular-sanitize/angular-sanitize.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/config.js"></script>
