KYLIN-1441 UI add partition time column, base on patch from @Dipesh

--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" type="text/css" href="components/angular-bootstrap-nav-tree/dist/abn_tree.css">
     <link rel="stylesheet" type="text/css" href="components/angular-toggle-switch/angular-toggle-switch.css">
     <link rel="stylesheet" type="text/css" href="components/angular-ui-select/dist/select.css">
+    <link rel="stylesheet" type="text/css" href="components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 
     <link rel="stylesheet/less" href="less/build.less">
     <!-- endref -->
@@ -114,6 +115,8 @@
 <script src="js/directives/directives.js"></script>
 <script src="js/directives/kylin_abn_tree_directive.js"></script>
 <script src="js/directives/angular-tree-control.js"></script>
+<script src="js/directives/datetimepicker.js"></script>
+
 <script src="js/factories/graph.js"></script>
 <script src="js/services/cache.js"></script>
 <script src="js/services/message.js"></script>
