--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -105,7 +105,6 @@
 <script src="components/jquery-ui/jquery-ui.min.js"></script>
 <script src="components/angular-ui-sortable/sortable.js"></script>
 <script src="components/angular-toggle-switch/angular-toggle-switch.js"></script>
-<script src="components/angular-ui-select/dist/select.js"></script>
 <script src="components/angular-sanitize/angular-sanitize.js"></script>
 
 <script src="js/app.js"></script>
@@ -116,6 +115,7 @@
 <script src="js/directives/kylin_abn_tree_directive.js"></script>
 <script src="js/directives/angular-tree-control.js"></script>
 <script src="js/directives/datetimepicker.js"></script>
+<script src="js/directives/select.js"></script>
 
 <script src="js/factories/graph.js"></script>
 <script src="js/services/cache.js"></script>
