KYLIN-1600 diagnosis project & job

--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -160,6 +160,7 @@
 
 <!--New GUI-->
 <script src="js/model/modelsManager.js"></script>
+<script src="js/services/badQuery.js"></script>
 
 <script src="js/controllers/page.js"></script>
 <script src="js/controllers/index.js"></script>
@@ -188,6 +189,7 @@
 <script src="js/controllers/modelEdit.js"></script>
 
 <script src="js/controllers/streamingConfig.js"></script>
+<script src="js/controllers/badQuery.js"></script>
 
 <!--New GUI-->
 <script src="js/controllers/models.js"></script>
