Fix for KYLIN-989
Signed-off-by: Jason <jiatuer@163.com>

--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" type="text/css" href="components/messenger/build/css/messenger.css">
     <link rel="stylesheet" type="text/css" href="components/messenger/build/css/messenger-theme-ice.css">
     <link rel="stylesheet" type="text/css" href="components/ng-grid/ng-grid.css">
+    <link rel="stylesheet" type="text/css" href="components/angular-ui-grid/ui-grid.min.css">
     <link rel="stylesheet" type="text/css" href="components/chosen/chosen.css">
     <link rel="stylesheet" type="text/css" href="components/angular-chosen-localytics/chosen-spinner.css">
     <link rel="stylesheet" type="text/css" href="components/animate.css/animate.css">
@@ -82,6 +83,7 @@
 <script src="components/angularLocalStorage/src/angularLocalStorage.js"></script>
 <script src="components/angular-base64/angular-base64.js"></script>
 <script src="components/ng-grid/build/ng-grid.js"></script>
+<script src="components/angular-ui-grid/ui-grid.min.js">
 <script src="components/angular-tree-control/angular-tree-control.js"></script>
 <script src="components/ace-builds/src-min-noconflict/ace.js"></script>
 <script src="components/ace-builds/src-noconflict/ext-language_tools.js"></script>
