minor UI import js syntax update

--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -83,7 +83,7 @@
 <script src="components/angularLocalStorage/src/angularLocalStorage.js"></script>
 <script src="components/angular-base64/angular-base64.js"></script>
 <script src="components/ng-grid/build/ng-grid.js"></script>
-<script src="components/angular-ui-grid/ui-grid.min.js">
+<script src="components/angular-ui-grid/ui-grid.min.js"></script>
 <script src="components/angular-tree-control/angular-tree-control.js"></script>
 <script src="components/ace-builds/src-min-noconflict/ace.js"></script>
 <script src="components/ace-builds/src-noconflict/ext-language_tools.js"></script>
