Fix ui-grid font issue and auto-add space issue
Signed-off-by: Jason <jiatuer@163.com>

--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -83,7 +83,6 @@
 <script src="components/angularLocalStorage/src/angularLocalStorage.js"></script>
 <script src="components/angular-base64/angular-base64.js"></script>
 <script src="components/ng-grid/build/ng-grid.js"></script>
-<script src="components/angular-ui-grid/ui-grid.min.js"></script>
 <script src="components/angular-tree-control/angular-tree-control.js"></script>
 <script src="components/ace-builds/src-min-noconflict/ace.js"></script>
 <script src="components/ace-builds/src-noconflict/ext-language_tools.js"></script>
@@ -118,6 +117,7 @@
 <script src="js/directives/angular-tree-control.js"></script>
 <script src="js/directives/datetimepicker.js"></script>
 <script src="js/directives/select.js"></script>
+<script src="js/directives/ui-grid.js"></script>
 
 <script src="js/factories/graph.js"></script>
 <script src="js/services/cache.js"></script>
